重构创意中心模块 - 实现三栏布局和管理员审核功能
- 删除原有创意中心，重新设计为三栏布局
- 左侧：创意清单，支持按状态和类别筛选
- 中间：创意详情展示
- 右侧：管理员专属审核面板（仅管理员可见）
- 实现积分奖励系统和审核流程
- 将创意中心移至关于页面作为开发者工具
- 支持用户角色权限控制
- 优化用户体验和界面交互

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -40,6 +40,11 @@
             </div>
         </header>
 
+        <!-- 水平导航栏 -->
+        <nav class="horizontal-nav" id="horizontalNav">
+            <!-- 专业功能导航将通过JavaScript动态加载 -->
+        </nav>
+
         <div class="app-body">
             <!-- 侧边栏导航 -->
             <aside class="sidebar">
