--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
                 <span class="tagline">极速协同创新平台</span>
             </div>
             <div class="nav-menu">
+                <a href="pages/about.html" class="nav-link">关于</a>
                 <button id="loginBtn" onclick="showLogin()">微信登录</button>
                 <button id="userBtn" onclick="showUserCenter()" style="display:none;">用户中心</button>
             </div>
