重构用户中心：删除用户管理模块，改为个人用户中心
- 删除原有的用户管理功能（管理员专用）
- 重新设计用户中心页面，专注于个人信息管理
- 更新HTML结构：采用现代化卡片式布局
- 重写CSS样式：渐变背景、响应式设计
- 重构JavaScript逻辑：从管理系统转为个人中心功能
- 新增功能：个人资料编辑、统计数据展示、最近活动记录
- 修复路由配置：确保/users路径正确指向用户中心页面
- 添加缓存破坏参数，解决浏览器缓存问题

--- a/public/test-dashboard.html
+++ b/public/test-dashboard.html
@@ -69,7 +69,7 @@
                                 <span class="icon">📦</span>产品中心
                             </a></li>
                             <li><a href="/users" class="nav-item">
-                                <span class="icon">👥</span>用户管理
+                                <span class="icon">👥</span>用户中心
                             </a></li>
                             <li><a href="/settings" class="nav-item">
                                 <span class="icon">⚙️</span>系统设置
